# guppy-embedded

./: CMakeLists.txt  README.md  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
example/: CMakeLists.txt  example.c  main.c
lib/barometer/: CMakeLists.txt  barometer.cpp
lib/barometer/include/: barometer.h
lib/guppy_lib/: CMakeLists.txt  guppy_lib.c
lib/guppy_lib/include/: guppy_lib.h
lib/led/: CMakeLists.txt  led.cpp
lib/led/include/: led.hpp
src/: barometer.cpp  barometer.h  guppy_lib.c  guppy_lib.h  guppylib.c  guppylib.h  led.cpp  led.h  led.hpp  main.c  main.cpp
src/modules/: barometer_sensor.cpp  barometer_sensor.h  board_motor.c  board_motor.cpp  board_motor.h  board_wet.cpp  board_wet.h  motor_controller.c  motor_controller.h
